[project]
name = "kastellan-worker-gliner-relex"
version = "0.0.1"
description = "GLiNER-Relex inference worker for kastellan (Apache 2.0 model; JSON-RPC stdio)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "kastellan contributors" }]
dependencies = [
    # GLiNER pulls the upstream `gliner` library (Apache 2.0). The
    # Knowledgator gliner-relex-* model weights load via this same lib;
    # no separate inference framework needed.
    "gliner>=0.2",
    "transformers>=5.5.0",
    "sentencepiece>=0.2",
    # Torch is implicit via transformers, but pin it explicitly so an
    # accidental wheel-resolution surprise (CUDA version mismatch) is
    # caught at uv sync time rather than at model load.
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]

[project.scripts]
# uv generates an executable shim at .venv/bin/kastellan-worker-gliner-relex
# equivalent to: python -m kastellan_worker_gliner_relex
# The manifest's `binary: PathBuf` field points at this shim — keeps
# the existing ToolEntry schema unchanged (no `args` field needed).
kastellan-worker-gliner-relex = "kastellan_worker_gliner_relex.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kastellan_worker_gliner_relex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
