[package]
name        = "kastellan-worker-kv-demo"
description = "Demo long-lived Net::Deny worker: a tiny persistent key/value store over JSON-RPC. Exercises the persistent-VM lifecycle (slice 5b)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-kv-demo"
path = "src/main.rs"

[dependencies]
kastellan-protocol       = { path = "../../protocol", version = "0.2.0" }
kastellan-worker-prelude = { path = "../prelude", version = "0.2.0" }
serde                  = { workspace = true }
serde_json             = { workspace = true }
anyhow                 = { workspace = true }
