[package]
name        = "kastellan-worker-mail"
description = "Tool worker: read-only access to a localmail archive over its /v1 REST API (search, messages, attachments)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-mail"
path = "src/main.rs"

[dependencies]
kastellan-protocol          = { path = "../../protocol", version = "0.2.0" }
kastellan-worker-prelude    = { path = "../prelude", version = "0.2.0" }
kastellan-worker-web-common = { path = "../web-common", version = "0.2.0" }
serde                    = { workspace = true }
serde_json               = { workspace = true }
anyhow                   = { workspace = true }
url                      = { workspace = true }
