[package]
name        = "kastellan-microvm-init"
description = "PID1 inside the Firecracker guest: mounts pseudo-FS, opens AF_VSOCK, wires it onto the worker's stdio, and execs the worker."
publish     = false # guest-internal binary baked into rootfs images, not a crates.io artifact
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-microvm-init"
path = "src/main.rs"

[dependencies]
# libc::c_char is available on macOS too — pack_ifname is cross-platform so its
# RED→GREEN TDD cycle can run on the Mac dev box (slice 5b-4b, task 2 override).
libc = "0.2"
