[package]
name        = "kastellan-microvm-run"
description = "Firecracker micro-VM launcher: boots a VM and bridges the worker JSON-RPC channel over hybrid vsock."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-microvm-run"
path = "src/main.rs"

[dependencies]
libc = { workspace = true }
