[package]
name        = "kastellan-worker-net-demo"
description = "Demo long-lived Net::Allowlist worker: does its own end-to-end TLS through a transparent-tunnel egress sidecar. Exercises network egress in a persistent VM (slice 5c)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-net-demo"
path = "src/main.rs"

[dependencies]
kastellan-protocol         = { path = "../../protocol", version = "0.1.0" }
kastellan-worker-prelude   = { path = "../prelude", version = "0.1.0" }
kastellan-worker-web-common = { path = "../web-common", version = "0.1.0" }
serde                    = { workspace = true }
serde_json               = { workspace = true }
anyhow                   = { workspace = true }
url                      = { workspace = true }
