[package]
name        = "kastellan-worker-net-demo"
description = "Demo long-lived Net::Allowlist worker: does its own end-to-end TLS through a transparent-tunnel egress sidecar. Exercises network egress in a persistent VM (slice 5c)."
publish     = false # demo worker — test/reference only, not a crates.io artifact
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-net-demo"
path = "src/main.rs"

[dependencies]
kastellan-protocol         = { path = "../../protocol", version = "0.2.0" }
kastellan-worker-prelude   = { path = "../prelude", version = "0.2.0" }
kastellan-worker-web-common = { path = "../web-common", version = "0.2.0" }
serde                    = { workspace = true }
serde_json               = { workspace = true }
anyhow                   = { workspace = true }
url                      = { workspace = true }

# Dev-only hermetic harness for `net.tls_probe`: a loopback rustls origin with an
# rcgen self-signed cert + a CONNECT-splicing UDS proxy. Versions/features copied
# verbatim from workers/web-common/Cargo.toml (rustls/tokio-rustls/rustls-pki-types)
# and workers/egress-proxy/Cargo.toml (rcgen) so the workspace lock is unchanged.
[dev-dependencies]
tokio            = { version = "1",    features = ["rt", "net", "io-util", "macros"] }
tokio-rustls     = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls           = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-pki-types = { version = "1",    features = ["std"] }
rcgen            = { version = "0.13", default-features = false, features = ["pem", "ring"] }
