[package]
name        = "hhagent-worker-prelude"
description = "Worker-side defence-in-depth: Landlock + seccomp-bpf, applied from inside the worker process before serving any request."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

[dependencies]
hhagent-protocol = { path = "../../protocol" }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }

# Linux-only kernel containment helpers. On macOS these targets are skipped;
# `lock_down()` is a no-op there because Seatbelt enforces equivalent policy
# from the parent side (see sandbox::macos_seatbelt — Phase 0b).
[target.'cfg(target_os = "linux")'.dependencies]
landlock    = { workspace = true }
seccompiler = { workspace = true }
libc        = "0.2"

[[bin]]
name = "hhagent-lockdown-probe"
path = "src/bin/lockdown_probe.rs"
