[package]
name        = "kastellan-worker-prelude"
description = "Worker-side defence-in-depth: Landlock + seccomp-bpf, applied from inside the worker process before serving any request."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[dependencies]
kastellan-protocol = { path = "../../protocol", version = "0.2.0" }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
# libc gives us POSIX setrlimit on both Linux and macOS. The Landlock +
# seccomp deps below remain Linux-only (the macOS prelude does no
# kernel containment of its own — Seatbelt does it from the parent).
libc             = "0.2"

# Linux-only kernel containment helpers. On macOS these targets are skipped;
# `lock_down()` is a no-op there because Seatbelt enforces equivalent policy
# from the parent side (see sandbox::macos_seatbelt — Phase 0b).
[target.'cfg(target_os = "linux")'.dependencies]
landlock    = { workspace = true }
seccompiler = { workspace = true }

[[bin]]
name = "kastellan-lockdown-probe"
path = "src/bin/lockdown_probe.rs"

[[bin]]
name = "kastellan-worker-lockdown-exec"
path = "src/bin/lockdown_exec.rs"
