[package]
name        = "kastellan-worker-shell-exec"
description = "Tool worker: run an argv from a strict allowlist. No shell interpretation."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

[[bin]]
name = "kastellan-worker-shell-exec"
path = "src/main.rs"

[dependencies]
kastellan-protocol       = { path = "../../protocol" }
kastellan-worker-prelude = { path = "../prelude" }
serde                  = { workspace = true }
serde_json             = { workspace = true }
anyhow                 = { workspace = true }
