[package]
name        = "kastellan-worker-shell-exec"
description = "Tool worker: run an argv from a strict allowlist. No shell interpretation."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-shell-exec"
path = "src/main.rs"

[dependencies]
kastellan-protocol       = { path = "../../protocol", version = "0.2.0" }
kastellan-worker-prelude = { path = "../prelude", version = "0.2.0" }
serde                  = { workspace = true }
serde_json             = { workspace = true }
anyhow                 = { workspace = true }
