[package]
name        = "kastellan-worker-web-common"
description = "Shared building blocks for net-egress tool workers: host allowlist matcher + capped HTTP transport seam."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[features]
# Pulls in the FakeGet test transport + helpers. Enable from a consumer's
# [dev-dependencies] so unit tests across workers share one fake.
testing = []
# SearxNG query logic (validate_endpoint / build_query_url / search / parse)
# plus the SearchProvider seam (direct + brokered). Pulls the internal
# kastellan-protocol dep for the brokered provider's JSON-RPC-over-UDS client.
# Its own #[cfg(test)] block uses crate::testing, so web-common's test command
# must enable both "search" and "testing" together.
search  = ["dep:kastellan-protocol"]
# Redirect-following drive loop (re-checks allowlist+https per hop). No extra deps.
fetch   = []
# Readable-text extraction (HTML readability / PDF / text). Pulls the parsers
# ONLY when enabled, so `search`-only consumers (web-search) stay lean.
extract = ["dep:pdf-extract", "dep:readable_html"]

[dependencies]
kastellan-protocol = { path = "../../protocol", version = "0.2.0", optional = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
reqwest    = { workspace = true, features = ["blocking"] } # blocking: synchronous transport for stdio workers
url        = { workspace = true }
hyper           = { version = "1",    features = ["client", "http1"] }
hyper-util      = { version = "0.1",  features = ["tokio"] }
http-body-util  = "0.1"
tokio           = { version = "1",    features = ["rt", "rt-multi-thread", "net", "io-util", "time"] }
tokio-rustls    = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls          = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-pki-types = "1"
webpki-roots    = "1"
bytes           = "1"
pdf-extract   = { workspace = true, optional = true }
readable_html = { workspace = true, optional = true }

[dev-dependencies]
# The brokered-provider tests bind a real one-shot Unix socket in a tempdir.
tempfile = "3"
