[package]
name        = "kastellan-worker-web-research"
description = "Composite tool worker: search (SearxNG) + fetch top-N allowlisted pages + rank relevant passages, in one call. GET-only."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-web-research"
path = "src/main.rs"

[dependencies]
kastellan-protocol          = { path = "../../protocol", version = "0.1.0" }
kastellan-worker-prelude    = { path = "../prelude", version = "0.1.0" }
kastellan-worker-web-common = { path = "../web-common", version = "0.1.0", features = ["search", "fetch", "extract"] }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
url        = { workspace = true }

[dev-dependencies]
kastellan-worker-web-common = { path = "../web-common", features = ["search", "fetch", "extract", "testing"] }
