[package]
name        = "kastellan-worker-web-search"
description = "Tool worker: query an operator-configured SearxNG instance and return ranked structured hits. GET-only."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-web-search"
path = "src/main.rs"

[dependencies]
kastellan-protocol          = { path = "../../protocol", version = "0.2.0" }
kastellan-worker-prelude    = { path = "../prelude", version = "0.2.0" }
kastellan-worker-web-common = { path = "../web-common", version = "0.2.0", features = ["search"] }
serde                     = { workspace = true }
serde_json                = { workspace = true }
anyhow                    = { workspace = true }
url                       = { workspace = true }

[dev-dependencies]
kastellan-worker-web-common = { path = "../web-common", features = ["testing"] }
tempfile = "3"
